--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <img src="https://t3.ftcdn.net/jpg/04/99/97/98/360_F_499979840_Utva5Vp9yLyIS2cnLuHYT3wgx2zcomAu.jpg" alt="">
     </div>
     <div class="title_justification">
-        <h1>Finding Yourself</h1>
+        <h1>Finding Myself</h1>
 <p> I would rename the book finding myself because I see the journey of Trevor Noah as he tries to fit in and wondering why he is different until he found out who he wanted to be. <br> At one time, he even asks his mother why they never went to Germany because other white kids had told him that they went to Germany because of the apartheid. He thought that if he had gone to Germany, he would fit in without the struggle he was going through in their country. </p>
 
 <p> In school he was confused as to where he should go during break because students  were classified according to colour and he did not fit to either of the extremes. He was too light for the blacks and he was too black for the whites. In the process he learned to use language as he had observed his mother do. He found out that language more than skin can be used to define who you are. He used to speak the Xhosa, English,Zulu and  Afrikaans. He used to talk to the students in their languages and as a result students started interacting with him and this made him less of an outsider. </p>
